Closed Bug 83675 Opened 24 years ago Closed 24 years ago

P12 import doesn't ask for token if smart card installed.

Categories

(Core Graveyard :: Security: UI, defect, P1)

1.0 Branch

Tracking

(Not tracked)

VERIFIED FIXED
psm2.0

People

(Reporter: javi, Assigned: javi)

References

Details

(Whiteboard: PDT+; verified)

Attachments

(3 files)

I tried importing a p12 blob onto a smart card and the cert manager never asked me what token to put the certs onto. It just automatically chose the internal slot. We should fix this, soon.
->p1
Priority: -- → P1
Summary: P12 import doesn't aks for token if smart card installed. → P12 import doesn't ask for token if smart card installed.
Target Milestone: --- → 2.0
Ignore the portion of the patch in nsSecureBrowserUIImpl.cpp
Assignee: ddrinan → javi
Some questions: Is this bug preventing all testing of cards? (i.e., is the import function a prerequisite to the testing of the other functions)? When can we expect publicly downloadable builds that include this fix? How can I help speed this process?
Assigning this bug to mcgreer.
Assignee: javi → mcgreer
r=mcgreer
I haven't tested that export still works with this patch. Got sidetracked by another issue when I came up with this patch.
oops, jumped the gun. I thought this bug was just for import.
taking bug
Assignee: mcgreer → javi
Attached patch Updated patchSplinter Review
r=mcgreer
+nsPKCS12Blob::nsPKCS12Blob():mTmpFile(nsnull), + mTmpFilePath(nsnull), + mTokenSet(PR_FALSE) { - mToken = nsnull; - mCertArray = nsnull; mUIContext = new PipUIContext(); - mTmpFile = NULL; - mTmpFilePath = NULL; } Did you mean to remove mCertArray from the initialization list? Fix that ( or respond to it ) and you have an sr=blizzard.
Good catch. I've added initializing mCertArray back to the constructor of nsPKCS12Blob.
Attached patch Updated patchSplinter Review
Blocks: 83989
a= asa@mozilla.org for checkin to the trunk. (on behalf of drivers)
Patch checked in.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Verified fixed.
Status: RESOLVED → VERIFIED
PDT for PSM
Whiteboard: PDT
PDT+ as per Steve Elmeer 6/20/2001
Whiteboard: PDT → PDT+
whiteboard->verified.
Whiteboard: PDT+ → PDT+; verified
Reopening. This is happening again to me. 11/9 Win98 trunk build.
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
Fixed. The iButton was not initialized.
Status: REOPENED → RESOLVED
Closed: 24 years ago24 years ago
Resolution: --- → FIXED
V
Status: RESOLVED → VERIFIED
Product: PSM → Core
Version: psm2.0 → 1.0 Branch
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: