Fix for Bug 83675 r=mcgreer, sr=blizzard, a=asa   If a user has a PKCS11 smart card installed, then give the user   the option of restoring a p12 file onto the smart card.